erDiagram
    RECIPES {
        uuid id PK
        varchar name
        varchar description
        integer cook_time
        integer prep_time
        smallint servings
        uuid main_photo_id FK
        varchar url
        timestamp archived_at
        timestamp created_at
        timestamp updated_at
    }

    INGREDIENTS {
        uuid id PK
        varchar name "display, keeps its casing"
        varchar canonical_name UK "identity: lower(btrim(name))"
        boolean is_staple "assumed in the cupboard"
        timestamp created_at
        timestamp updated_at
    }

    INGREDIENT_ALIASES {
        varchar alias PK "retired spellings and synonyms"
        uuid ingredient_id FK
        timestamp created_at
    }

    UNITS {
        uuid id PK
        varchar name UK
        varchar abbreviation
        timestamp created_at
        timestamp updated_at
    }

    LABELS {
        uuid id PK
        varchar type "course|cuisine|diet|method"
        varchar name
        varchar color
        timestamp created_at
        timestamp updated_at
    }

    STEPS {
        uuid id PK
        uuid recipe_id FK
        smallint step_order
        varchar description
        timestamp created_at
        timestamp updated_at
    }

    RECIPE_INGREDIENT {
        uuid recipe_id PK_FK
        uuid ingredient_id PK_FK
        text component PK "'' when the recipe has no sections"
        uuid unit_id FK
        double quantity
        text preparation
        timestamp created_at
        timestamp updated_at
    }

    RECIPE_LABEL {
        uuid recipe_id FK
        uuid label_id FK
        timestamp created_at
        timestamp updated_at
    }

    MEAL_PLAN_RECIPES {
        uuid recipe_id PK_FK
        timestamp added_at
    }

    PANTRY_ITEMS {
        uuid ingredient_id PK_FK
        timestamp added_at
    }

    SHOPPING_LIST_ITEMS {
        uuid id PK
        varchar name UK "free text, not a recipe ingredient"
        timestamp created_at
    }

    PHOTOS {
        uuid id PK
        varchar url
        varchar entity_type "recipe|step|ingredient"
        uuid entity_id "polymorphic, no FK"
        timestamp created_at
        timestamp updated_at
    }

    RECIPES ||--o{ STEPS : has
    RECIPES ||--o{ RECIPE_INGREDIENT : contains
    RECIPES ||--o{ RECIPE_LABEL : tagged_with
    RECIPES ||--o| MEAL_PLAN_RECIPES : planned_as
    RECIPES ||--o{ PHOTOS : images
    INGREDIENTS ||--o{ RECIPE_INGREDIENT : used_in
    INGREDIENTS ||--o{ INGREDIENT_ALIASES : also_known_as
    INGREDIENTS ||--o| PANTRY_ITEMS : stocked_as
    UNITS ||--o{ RECIPE_INGREDIENT : measures
    LABELS ||--o{ RECIPE_LABEL : categorizes
    STEPS ||--o{ PHOTOS : illustrates
    INGREDIENTS ||--o{ PHOTOS : photo_of
